--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,19 +9,35 @@ AllCops:
     - vendor/**/*
     - Vagrantfile
 
-ClassLength:
+Metrics/ClassLength:
+  Enabled: true
+  CountComments: false
+  Max: 100
+Style/Documentation:
   Enabled: false
-Documentation:
+Style/Encoding:
   Enabled: false
-Encoding:
+Style/HashSyntax:
   Enabled: false
-HashSyntax:
+Layout/LineLength:
   Enabled: false
-LineLength:
+Style/SignalException:
   Enabled: false
-SignalException:
+Style/WordArray:
   Enabled: false
-WordArray:
+Metrics/MethodLength:
   Enabled: false
-MethodLength:
-  Enabled: false
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+Lint/RaiseException:
+  Enabled: true
+Lint/StructNewOverride:
+  Enabled: true
+Style/ExponentialNotation:
+  Enabled: true
+Style/HashEachMethods:
+  Enabled: true
+Style/HashTransformKeys:
+  Enabled: true
+Style/HashTransformValues:
+  Enabled: true
