--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     container:
-      image: chef/chefdk
+      image: ruby:slim
     steps:
     - uses: actions/checkout@v2
     - name: Check style
