--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Check style
       run: |
-        apt -qq update && apt install -qq make
+        apt-get -qq update && apt-get -qq install build-essential
         bundle install
         bundle exec rake style
 
