only install test dependencies for linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Check style
       run: |
         apt-get -qq update && apt-get -qq install build-essential
-        bundle install
+        bundle install test
         bundle exec rake style
 
   # test:
